--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "heroku": "^7.60.2",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "rollbar": "^2.25.0"
   }
 }
